--- a/html/About.html
+++ b/html/About.html
@@ -49,10 +49,11 @@
         <span class="close-btn">&times;</span>
         <h3>User Dashboard</h3>
         <div class="user-info">
-            <p><strong>Name:</strong> John Doe</p>
-            <p><strong>Phone:</strong> +1 234 567 890</p>
-            <p><strong>Email:</strong> john.doe@example.com</p>
-            <p><strong>Address:</strong> 123 Eco Street, Green City</p>
+            <p><strong>Name:</strong> Michael Johnson</p>
+            <p><strong>Phone:</strong> +91 4876239647</p>
+            <p><strong>Email:</strong> michael.johnson@email.com</p>
+            <p><strong>Address:</strong> 321 Birch Street, Unit 302,
+                Lakeside, FL 33401, CALTAX</p>
         </div>
          <!-- Pickup History Section -->
     <div class="pickup-history">
@@ -78,38 +79,32 @@
                                 </span>
                             </div>
                             <h2>Trusted Experts in Waste Management and Recycling</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur. Arcu aliquet gravida pellentesque etiam vel
-                                tempor.
-                                Pellentesque vitae lacus non viverra faucibus ac consequat. Est mauris gravida cursus
-                                justo
-                                elit bibendum amet. Aliquam enim consectetur imperdiet eu pretium non tempus. Ac in
-                                aliquam
-                                nisl ullamcorper suscipit ut.
+                            <p>Dedicate to provide sustainable solutions that protect the environment. With years of experience in the industry, our team is committed to offering efficient, reliable services that help communities and businesses manage their waste responsibly. We specialize in waste disposal, recycling, and environmentally conscious practices, ensuring that recyclable materials are processed properly to reduce landfill impact. Our goal is to create a cleaner, greener future by promoting waste reduction and recycling initiatives, all while delivering top-notch customer service and fostering long-term partnerships.
                             </p>
                             <div class="d-flex flex-column gap-3">
                                 <div class="d-flex align-items-center gap-3 ">
                                     <i class="fa-solid fa-arrow-right-long"></i>
-                                    <p>Lorem ipsum dolor sit amet consectetur. </p>
+                                    <p>Prioritize customer satisfaction by offering personalized services, timely pickups, and clear communication to ensure a seamless experience.</p>
                                 </div>
                                 <div class="d-flex align-items-center gap-3 ">
                                     <i class="fa-solid fa-arrow-right-long"></i>
-                                    <p>Lorem ipsum dolor sit amet consectetur. </p>
+                                    <p>With years of industry experience, our team delivers efficient, dependable waste disposal and recycling solutions tailored to meet your needs.</p>
                                 </div>
                                 <div class="d-flex align-items-center gap-3 ">
                                     <i class="fa-solid fa-arrow-right-long"></i>
-                                    <p>Lorem ipsum dolor sit amet consectetur. </p>
+                                    <p>Services designed to reduce environmental impact and promote sustainability.</p>
                                 </div>
                             </div>
                             <div class="d-flex pt-5">
                                 <div class="d-flex flex-column gap-1">
                                     <figure><img src="assets/images/index/about_icon2.png" alt=""></figure>
                                     <h3>Waste Services</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur. Neque id </p>
+                                    <p>Environmentally responsible solutions for the collection, disposal, and recycling of waste, tailored to meet your specific needs.</p>
                                 </div>
                                 <div class="d-flex flex-column gap-1">
                                     <figure><img src="assets/images/index/about_icon1.png" alt=""></figure>
                                     <h3>Recycling</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur. Neque id </p>
+                                    <p>Processing of materials, promoting sustainability and reducing environmental impact</p>
                                 </div>
                             </div>
                             <a href="Service.html" class="hover2">Learn more</a>
@@ -141,9 +136,7 @@
                         </div>
                         <div class="d-flex">
                             <h2>Sustainable Solutions for a Brighter Future</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur. Condimentum risus eu et lacus et eget. Enim enim
-                                tempor nunc
-                                consequat tempor sem iaculis ullamcorper.</p>
+                            <p>We provide sustainable solutions that drive environmental responsibility, helping to create a brighter, more sustainable future for generations to come.</p>
                         </div>
                     </div>
                     <div class="row position-relative">
@@ -154,8 +147,7 @@
                                 </figure>
                                 <div class="d-flex flex-column ">
                                     <h4>Environmental Sustainability </h4>
-                                    <p>Lorem ipsum dolor sit amet consectetur. Augue amet pharetra viverra a quis nunc
-                                        sollicitudin purus.
+                                    <p>We drive sustainability by conserving resources and maintaining balance.
                                     </p>
                                 </div>
                             </div>
@@ -167,8 +159,7 @@
                                 </figure>
                                 <div class="d-flex flex-column">
                                     <h4>Customer Focus</h4>
-                                    <p>Lorem ipsum dolor sit amet consectetur. Augue amet pharetra viverra a quis nunc
-                                        sollicitudin purus.
+                                    <p>We focus on customer satisfaction with exceptional service and tailored solutions.
                                     </p>
                                 </div>
                             </div>
@@ -180,8 +171,7 @@
                                 </figure>
                                 <div class="d-flex flex-column">
                                     <h4>Community Engagement </h4>
-                                    <p>Lorem ipsum dolor sit amet consectetur. Augue amet pharetra viverra a quis nunc
-                                        sollicitudin purus.
+                                    <p>Our community engagement promotes sustainability for a better environment.
                                     </p>
                                 </div>
                             </div>
@@ -212,11 +202,7 @@
                                 </span>
                             </div>
                             <h2>Your Sustainable Choice for Waste Management.</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur. Arcu aliquet gravida pellentesque etiam vel
-                                tempor. Pellentesque vitae lacus non viverra faucibus ac consequat. Est mauris gravida
-                                cursus justo elit bibendum amet. Aliquam enim consectetur imperdiet eu pretium non
-                                tempus. Ac in aliquam nisl ullamcorper suscipit ut. Sit ut orci consequat pellentesque
-                                dictum sit quis sed.
+                            <p>We blend reliability, efficiency, and sustainability to provide eco-friendly services that contribute to a cleaner, healthier environment. With a strong focus on responsible disposal, recycling, and waste reduction, we ensure that every step of our process helps reduce environmental impact. Our team is dedicated to delivering top-notch customer service while fostering long-term sustainable practices, giving you peace of mind that you are making a positive contribution to the planet's future. Trust us to manage your waste with the utmost care and commitment to sustainability.
                             </p>
                             <a href="PricingPlan.html" class="hover2">Learn more</a>
                         </div>
@@ -227,14 +213,14 @@
                                 <img src="assets/images/icons/choose_icon1.svg" alt="choose_icon1">
                             </figure>
                             <h4>Large volume Pickup</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                            <p>Solutions for the removal of bulk waste, ensuring quick and responsible disposal for both residential and commercial needs.</p>
                         </div>
                         <div class="d-flex flex-column align-items-center">
                             <figure>
                                 <img src="assets/images/icons/choose_icon4.svg" alt="choose_icon1">
                             </figure>
                             <h4>Easy Online Scheduling</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                            <p>Effortlessly schedule waste collection online for a smooth experience.</p>
                         </div>
                         
                        
@@ -263,7 +249,7 @@
                             </div>
                             <div class="d-flex flex-column gap-3 ">
                                 <h2>Frequent Asked Questions</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur. Condimentum risus eu et lacus et eget.</p>
+                                <p>Explore our Frequently Asked Questions section to find answers to common inquiries and gain a better understanding of our services and policies.</p>
                             </div>
                             <!-- accordion -->
                             <div class="accordion" id="accordionExample">
@@ -272,15 +258,13 @@
                                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                             data-bs-target="#collapseOne" aria-expanded="true"
                                             aria-controls="collapseOne">
-                                            Loreum Ipsum Dummy Text Data
+                                            What is the importance of recycling in waste management?
                                         </button>
                                     </h2>
                                     <div id="collapseOne" class="accordion-collapse collapse show"
                                         aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor incididunt ut
-                                            labore et dolore magna aliqua. In vitae turpis massa sed elementum
+                                            Recycling plays a crucial role in waste management by reducing the amount of waste sent to landfills, conserving natural resources, and lowering energy consumption. It helps minimize environmental impact and supports the creation of a circular economy where materials are reused rather than discarded.
                                         </div>
                                     </div>
                                 </div>
@@ -289,15 +273,13 @@
                                         <button class="accordion-button collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#collapseTwo"
                                             aria-expanded="false" aria-controls="collapseTwo">
-                                            Loreum Ipsum Dummy Text Data
+                                            How can I properly segregate waste at home?
                                         </button>
                                     </h2>
                                     <div id="collapseTwo" class="accordion-collapse collapse"
                                         aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor incididunt ut
-                                            labore et dolore magna aliqua. In vitae turpis massa sed elementum
+                                            Proper waste segregation involves separating recyclables (like paper, plastic, and glass), compostable materials (such as food scraps), and non-recyclable waste (like contaminated items). Ensure each type of waste is placed in designated bins, making it easier for waste collectors to recycle and dispose of it properly.
                                         </div>
                                     </div>
                                 </div>
@@ -306,15 +288,13 @@
                                         <button class="accordion-button collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#collapseThree"
                                             aria-expanded="false" aria-controls="collapseThree">
-                                            Loreum Ipsum Dummy Text Data
+                                            What happens to my recycling after it’s collected?
                                         </button>
                                     </h2>
                                     <div id="collapseThree" class="accordion-collapse collapse"
                                         aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor incididunt ut
-                                            labore et dolore magna aliqua. In vitae turpis massa sed elementum
+                                            Once collected, your recycling is taken to a materials recovery facility where it is sorted, cleaned, and processed into raw materials. These materials are then used to create new products, helping reduce the need for raw material extraction and lowering overall environmental impact.
                                         </div>
                                     </div>
                                 </div>
@@ -323,15 +303,13 @@
                                         <button class="accordion-button collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#collapseFour"
                                             aria-expanded="false" aria-controls="collapseFour">
-                                            Loreum Ipsum Dummy Text Data
+                                            How can my business reduce waste and be more sustainable?
                                         </button>
                                     </h2>
                                     <div id="collapseFour" class="accordion-collapse collapse"
                                         aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor incididunt ut
-                                            labore et dolore magna aliqua. In vitae turpis massa sed elementum
+                                            Businesses can reduce waste by implementing practices like waste segregation, using sustainable packaging, and optimizing their resource usage. Additionally, businesses can invest in energy-efficient equipment, reduce paper usage, and promote a culture of sustainability among employees and customers.
                                         </div>
                                     </div>
                                 </div>
@@ -340,15 +318,13 @@
                                         <button class="accordion-button collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#collapseFive"
                                             aria-expanded="false" aria-controls="collapseFive">
-                                            Loreum Ipsum Dummy Text Data
+                                            Why is it important to manage electronic waste (e-waste) properly?
                                         </button>
                                     </h2>
                                     <div id="collapseFive" class="accordion-collapse collapse"
                                         aria-labelledby="headingFive" data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor incididunt ut
-                                            labore et dolore magna aliqua. In vitae turpis massa sed elementum
+                                            Proper management of e-waste is vital because electronic devices contain hazardous materials like lead, mercury, and cadmium that can contaminate the environment if disposed of incorrectly. Recycling e-waste helps recover valuable metals and ensures that harmful substances are safely handled, reducing environmental and health risks.
                                         </div>
                                     </div>
                                 </div>
