--- a/html/Contact.html
+++ b/html/Contact.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>TrashCure - Empowering Responsible Waste Management, Let's Make a Difference</title>
-  <meta name="keywords" content="TrashCure - Empowering Responsible Waste Management, Let's Make a Difference">
+  <title>GREEN HORIZON - Empowering Responsible Waste Management, Let's Make a Difference</title>
+  <meta name="keywords" content="GREEN HORIZON - Empowering Responsible Waste Management, Let's Make a Difference">
   <meta name="robots" content="INDEX,FOLLOW">
   <!-- Mobile Specific Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -49,10 +49,11 @@
             <span class="close-btn">&times;</span>
             <h3>User Dashboard</h3>
             <div class="user-info">
-                <p><strong>Name:</strong> John Doe</p>
-                <p><strong>Phone:</strong> +1 234 567 890</p>
-                <p><strong>Email:</strong> john.doe@example.com</p>
-                <p><strong>Address:</strong> 123 Eco Street, Green City</p>
+                <p><strong>Name:</strong> Michael Johnson</p>
+                <p><strong>Phone:</strong>  +91 4876239647</p>
+                <p><strong>Email:</strong> michael.johnson@email.com</p>
+                <p><strong>Address:</strong> 321 Birch Street, Unit 302,
+                  Lakeside, FL 33401, CALTAX</p>
             </div>
              <!-- Pickup History Section -->
         <div class="pickup-history">
@@ -74,26 +75,28 @@
             <div class="d-flex align-items-center">
               <div class="d-flex flex-column gap-3 ">
                 <h2>Contact Us</h2>
-                <p>Lorem ipsum dolor sit amet consectetur. Mattis non vestibulum.</p>
+                <p>For more information or to schedule our services, please don't hesitate to contact us.</p>
               </div>
               <div class="d-flex flex-column gap-4">
                 <div class="d-flex gap-3">
                   <figure>
                     <img src="assets/images/icons/contact_icon1.svg" alt="contact_icon1">
                   </figure>
-                  <p>Plaza XYZ Street, XYZ City. XYZ </p>
+                  <p>1234 Maple Street, Suite 567
+                    Springfield, IL 62701
+                    KANNUR</p>
                 </div>
                 <div class="d-flex gap-3">
                   <figure>
                     <img src="assets/images/icons/contact_icon2.svg" alt="contact_icon2">
                   </figure>
-                  <p>xyz@gmail.com </p>
+                  <p>greenhorizon@gmail.com </p>
                 </div>
                 <div class="d-flex gap-3">
                   <figure>
                     <img src="assets/images/icons/contact_icon3.svg" alt="contact_icon3">
                   </figure>
-                  <p>+123-4567-890</p>
+                  <p>+91 8765438725</p>
                 </div>
               </div>
             </div>
@@ -102,8 +105,7 @@
             <div class="d-flex flex-column align-items-end">
               <div class="d-flex flex-column gap-1 ">
                 <h2>Send A Message</h2>
-                <p>Lorem ipsum dolor sit amet consectetur. Consectetur volutpat urna risus diam elementum
-                  pellentesque velit phasellus sit.
+                <p>Please feel free to send us a message with any questions or inquiries, and our team will respond promptly to assist you with the information you need.
                 </p>
               </div>
               <form class="d-flex flex-column Subscribe-massage  ">
