--- a/html/Service.html
+++ b/html/Service.html
@@ -50,10 +50,11 @@
             <span class="close-btn">&times;</span>
             <h3>User Dashboard</h3>
             <div class="user-info">
-                <p><strong>Name:</strong> John Doe</p>
-                <p><strong>Phone:</strong> +1 234 567 890</p>
-                <p><strong>Email:</strong> john.doe@example.com</p>
-                <p><strong>Address:</strong> 123 Eco Street, Green City</p>
+                <p><strong>Name:</strong> Michael Johnson</p>
+                <p><strong>Phone:</strong> +91 4876239647</p>
+                <p><strong>Email:</strong> michael.johnson@email.com</p>
+                <p><strong>Address:</strong> 321 Birch Street, Unit 302,
+                    Lakeside, FL 33401, CALTAX</p>
             </div>
              <!-- Pickup History Section -->
         <div class="pickup-history">
@@ -90,8 +91,7 @@
                                 </figure>
                                 <div class="d-flex flex-column gap-1">
                                     <h3>Garbage Pickup</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur. Sagittis et lacinia nibh nec orci
-                                        tincidunt vivamus.
+                                    <p>Service ensures timely and efficient waste collection, promoting a cleaner and more organized environment for both residential and commercial properties.
                                     </p>
                                     <div class="d-flex gap-2 align-items-end">
                                         <a href="SingleService.html">Read more</a>
@@ -104,8 +104,7 @@
                             <div>
                                 <div class="d-flex flex-column gap-1">
                                     <h3>Residential Recycling</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur. Sagittis et lacinia nibh nec orci
-                                        tincidunt vivamus.
+                                    <p>Provides a convenient and sustainable solution for sorting and disposing of recyclable materials, helping homeowners contribute to environmental preservation.
                                     </p>
                                     <div class="d-flex gap-2 align-items-end">
                                         <a href="SingleService.html">Read more</a>
@@ -124,8 +123,7 @@
                                 </figure>
                                 <div class="d-flex flex-column gap-1">
                                     <h3>Dumpster Rental</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur. Sagittis et lacinia nibh nec orci
-                                        tincidunt vivamus.
+                                    <p>Offers reliable and flexible waste disposal solutions, providing a range of sizes to accommodate both residential and commercial needs for efficient cleanups and construction projects.
                                     </p>
                                     <div class="d-flex gap-2 align-items-end">
                                         <a href="SingleService.html">Read more</a>
@@ -141,8 +139,7 @@
                                 </figure>
                                 <div class="d-flex flex-column gap-1">
                                     <h3>Junk Removal</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur. Sagittis et lacinia nibh nec orci
-                                        tincidunt vivamus.
+                                    <p>Ensures fast, efficient, and eco-friendly disposal of unwanted items, helping you declutter your space while promoting sustainable practices.
                                     </p>
                                     <div class="d-flex gap-2 align-items-end">
                                         <a href="SingleService.html">Read more</a>
@@ -155,8 +152,11 @@
                             <div>
                                 <div class="d-flex flex-column gap-1">
                                     <h3>Secure Destruction</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur. Sagittis et lacinia nibh nec orci
-                                        tincidunt vivamus.
+                                    <p>Guarantees the safe and confidential disposal of sensitive materials, ensuring compliance with privacy regulations and protecting your information from unauthorized access.
+
+
+
+
                                     </p>
                                     <div class="d-flex gap-2 align-items-end">
                                         <a href="SingleService.html">Read more</a>
@@ -175,8 +175,7 @@
                                 </figure>
                                 <div class="d-flex flex-column gap-1">
                                     <h3>Electronic Waste Recycling</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur. Sagittis et lacinia nibh nec orci
-                                        tincidunt vivamus.
+                                    <p>Responsible and eco-friendly solution for the disposal of outdated or non-functional electronics, ensuring proper recycling and minimizing environmental impact.
                                     </p>
                                     <div class="d-flex gap-2 align-items-end">
                                         <a href="SingleService.html">Read more</a>
