--- a/html/index.html
+++ b/html/index.html
@@ -52,10 +52,11 @@
       <span class="close-btn">&times;</span>
       <h3>User Dashboard</h3>
       <div class="user-info">
-          <p><strong>Name:</strong> John Doe</p>
-          <p><strong>Phone:</strong> +1 234 567 890</p>
-          <p><strong>Email:</strong> john.doe@example.com</p>
-          <p><strong>Address:</strong> 123 Eco Street, Green City</p>
+          <p><strong>Name:</strong> Michael Johnson</p>
+          <p><strong>Phone:</strong>  +91 4876239647</p>
+          <p><strong>Email:</strong>michael.johnson@email.com</p>
+          <p><strong>Address:</strong> 321 Birch Street, Unit 302,
+            Lakeside, FL 33401, CALTAX</p>
       </div>
        <!-- Pickup History Section -->
   <div class="pickup-history">
@@ -130,7 +131,7 @@
             </figure>
             <div class="d-flex flex-column">
               <h3>Safe Disposal</h3>
-              <p>Lorem ipsum dolor sit amet consectetur. Neque id </p>
+              <p>Environmentally responsible and secure removal of waste, adhering to all safety regulations and promoting sustainability.</p>
             </div>
           </div>
           <hr>
@@ -140,7 +141,7 @@
             </figure>
             <div class="d-flex flex-column">
               <h3>Scheduled Pickup</h3>
-              <p>Lorem ipsum dolor sit amet consectetur. Neque id </p>
+              <p>To easily arrange a convenient pickup time, ensuring timely and efficient waste collection tailored to your needs.</p>
             </div>
           </div>
           <hr>
@@ -150,7 +151,7 @@
             </figure>
             <div class="d-flex flex-column">
               <h3>Extensive Recycling</h3>
-              <p>Lorem ipsum dolor sit amet consectetur. Neque id </p>
+              <p>Covers a wide range of materials, ensuring that all recyclable items are properly sorted and processed to reduce waste and promote sustainability.</p>
             </div>
           </div>
         </div>
@@ -170,38 +171,32 @@
                 </span>
               </div>
               <h2>Trusted Experts in Waste Management and Recycling</h2>
-              <p>Lorem ipsum dolor sit amet consectetur. Arcu aliquet gravida pellentesque etiam vel
-                tempor.
-                Pellentesque vitae lacus non viverra faucibus ac consequat. Est mauris gravida cursus
-                justo
-                elit bibendum amet. Aliquam enim consectetur imperdiet eu pretium non tempus. Ac in
-                aliquam
-                nisl ullamcorper suscipit ut.
+              <p>Dedicate to provide sustainable solutions that protect the environment. With years of experience in the industry, our team is committed to offering efficient, reliable services that help communities and businesses manage their waste responsibly. We specialize in waste disposal, recycling, and environmentally conscious practices, ensuring that recyclable materials are processed properly to reduce landfill impact. Our goal is to create a cleaner, greener future by promoting waste reduction and recycling initiatives, all while delivering top-notch customer service and fostering long-term partnerships.
               </p>
               <div class="d-flex flex-column gap-3">
                 <div class="d-flex align-items-center gap-3 ">
                   <i class="fa-solid fa-arrow-right-long"></i>
-                  <p>Lorem ipsum dolor sit amet consectetur. </p>
+                  <p>Prioritize customer satisfaction by offering personalized services, timely pickups, and clear communication to ensure a seamless experience.</p>
                 </div>
                 <div class="d-flex align-items-center gap-3 ">
                   <i class="fa-solid fa-arrow-right-long"></i>
-                  <p>Lorem ipsum dolor sit amet consectetur. </p>
+                  <p>With years of industry experience, our team delivers efficient, dependable waste disposal and recycling solutions tailored to meet your needs.</p>
                 </div>
                 <div class="d-flex align-items-center gap-3 ">
                   <i class="fa-solid fa-arrow-right-long"></i>
-                  <p>Lorem ipsum dolor sit amet consectetur. </p>
+                  <p>Services designed to reduce environmental impact and promote sustainability.</p>
                 </div>
               </div>
               <div class="d-flex pt-5">
                 <div class="d-flex flex-column gap-1">
                   <figure><img src="assets/images/index/about_icon2.png" alt=""></figure>
                   <h3>Waste Services</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur. Neque id </p>
+                  <p>Environmentally responsible solutions for the collection, disposal, and recycling of waste, tailored to meet your specific needs.</p>
                 </div>
                 <div class="d-flex flex-column gap-1">
                   <figure><img src="assets/images/index/about_icon1.png" alt=""></figure>
                   <h3>Recycling</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur. Neque id </p>
+                  <p>Processing of materials, promoting sustainability and reducing environmental impact.</p>
                 </div>
               </div>
               <a href="About.html" class="hover2">Learn more</a>
@@ -244,8 +239,7 @@
                 </figure>
                 <div class="d-flex flex-column gap-1">
                   <h3>Garbage Pickup</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur. Sagittis et lacinia nibh nec orci
-                    tincidunt vivamus.
+                  <p>Service ensures timely and efficient waste collection, promoting a cleaner and more organized environment for both residential and commercial properties.
                   </p>
                   <div class="d-flex gap-2 align-items-end">
                     <a href="SingleService.html">Read more</a>
@@ -258,8 +252,7 @@
               <div>
                 <div class="d-flex flex-column gap-1">
                   <h3>Residential Recycling</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur. Sagittis et lacinia nibh nec orci
-                    tincidunt vivamus.
+                  <p>Provides a convenient and sustainable solution for sorting and disposing of recyclable materials, helping homeowners contribute to environmental preservation.
                   </p>
                   <div class="d-flex gap-2 align-items-end">
                     <a href="SingleService.html">Read more</a>
@@ -278,8 +271,7 @@
                 </figure>
                 <div class="d-flex flex-column gap-1">
                   <h3>Dumpster Rental</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur. Sagittis et lacinia nibh nec orci
-                    tincidunt vivamus.
+                  <p>Offers reliable and flexible waste disposal solutions, providing a range of sizes to accommodate both residential and commercial needs for efficient cleanups and construction projects.
                   </p>
                   <div class="d-flex gap-2 align-items-end">
                     <a href="SingleService.html">Read more</a>
@@ -295,8 +287,7 @@
                 </figure>
                 <div class="d-flex flex-column gap-1">
                   <h3>Junk Removal</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur. Sagittis et lacinia nibh nec orci
-                    tincidunt vivamus.
+                  <p>Ensures fast, efficient, and eco-friendly disposal of unwanted items, helping you declutter your space while promoting sustainable practices.
                   </p>
                   <div class="d-flex gap-2 align-items-end">
                     <a href="SingleService.html">Read more</a>
@@ -309,8 +300,7 @@
               <div>
                 <div class="d-flex flex-column gap-1">
                   <h3>Secure Destruction</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur. Sagittis et lacinia nibh nec orci
-                    tincidunt vivamus.
+                  <p>Guarantees the safe and confidential disposal of sensitive materials, ensuring compliance with privacy regulations and protecting your information from unauthorized access.
                   </p>
                   <div class="d-flex gap-2 align-items-end">
                     <a href="SingleService.html">Read more</a>
@@ -329,8 +319,7 @@
                 </figure>
                 <div class="d-flex flex-column gap-1">
                   <h3>Electronic Waste Recycling</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur. Sagittis et lacinia nibh nec orci
-                    tincidunt vivamus.
+                  <p>Responsible and eco-friendly solution for the disposal of outdated or non-functional electronics, ensuring proper recycling and minimizing environmental impact.
                   </p>
                   <div class="d-flex gap-2 align-items-end">
                     <a href="SingleService.html">Read more</a>
@@ -365,11 +354,11 @@
                 </span>
               </div>
               <h2>Your Sustainable Choice for Waste Management.</h2>
-              <p>Lorem ipsum dolor sit amet consectetur. Arcu aliquet gravida pellentesque etiam vel
-                tempor. Pellentesque vitae lacus non viverra faucibus ac consequat. Est mauris gravida
-                cursus justo elit bibendum amet. Aliquam enim consectetur imperdiet eu pretium non
-                tempus. Ac in aliquam nisl ullamcorper suscipit ut. Sit ut orci consequat pellentesque
-                dictum sit quis sed.
+              <p>We blend reliability, efficiency, and sustainability to provide eco-friendly services that contribute to a cleaner, healthier environment. With a strong focus on responsible disposal, recycling, and waste reduction, we ensure that every step of our process helps reduce environmental impact. Our team is dedicated to delivering top-notch customer service while fostering long-term sustainable practices, giving you peace of mind that you are making a positive contribution to the planet's future. Trust us to manage your waste with the utmost care and commitment to sustainability.
+
+
+
+
               </p>
               <a href="About.html" class="hover2">Learn more</a>
             </div>
@@ -380,14 +369,14 @@
                 <img src="assets/images/icons/choose_icon1.svg" alt="choose_icon1">
               </figure>
               <h4>Large volume Pickup</h4>
-              <p>Lorem ipsum dolor sit amet consectetur.</p>
+              <p>Solutions for the removal of bulk waste, ensuring quick and responsible disposal for both residential and commercial needs.</p>
             </div>
             <div class="d-flex flex-column align-items-center">
               <figure>
                 <img src="assets/images/icons/choose_icon4.svg" alt="choose_icon1">
               </figure>
               <h4>Easy Online Scheduling</h4>
-              <p>Lorem ipsum dolor sit amet consectetur.</p>
+              <p>Effortlessly schedule waste collection online for a smooth experience.</p>
             </div>
            
           </div>
@@ -404,26 +393,28 @@
             <div class="d-flex align-items-center">
               <div class="d-flex flex-column gap-3 ">
                 <h2>Contact Us</h2>
-                <p>Lorem ipsum dolor sit amet consectetur. Mattis non vestibulum.</p>
+                <p>For more information or to schedule our services, please don't hesitate to contact us.</p>
               </div>
               <div class="d-flex flex-column gap-4">
                 <div class="d-flex gap-3">
                   <figure>
                     <img src="assets/images/icons/contact_icon1.svg" alt="contact_icon1">
                   </figure>
-                  <p>Plaza XYZ Street, XYZ City. XYZ </p>
+                  <p>1234 Maple Street, Suite 567
+                    Springfield, IL 62701
+                    KANNUR</p>
                 </div>
                 <div class="d-flex gap-3">
                   <figure>
                     <img src="assets/images/icons/contact_icon2.svg" alt="contact_icon2">
                   </figure>
-                  <p>xyz@gmail.com </p>
+                  <p>greenhorizon@gmail.com </p>
                 </div>
                 <div class="d-flex gap-3">
                   <figure>
                     <img src="assets/images/icons/contact_icon3.svg" alt="contact_icon3">
                   </figure>
-                  <p>+123-4567-890</p>
+                  <p>+91 8765438725</p>
                 </div>
               </div>
             </div>
@@ -432,8 +423,7 @@
             <div class="d-flex flex-column align-items-end">
               <div class="d-flex flex-column gap-1 ">
                 <h2>Send A Message</h2>
-                <p>Lorem ipsum dolor sit amet consectetur. Consectetur volutpat urna risus diam elementum
-                  pellentesque velit phasellus sit.
+                <p>Please feel free to send us a message with any questions or inquiries, and our team will respond promptly to assist you with the information you need.
                 </p>
               </div>
               <form  class="d-flex flex-column Subscribe-massage ">
