--- a/html/testing.html
+++ b/html/testing.html
@@ -21,7 +21,7 @@
   <!-- slick-slider link css -->
   <link rel="stylesheet" href="assets/css/slick.min.css">
 
-  <title>Trash Cure</title>
+  <title>GREEN HORIZON</title>
 </head>
 
 <body>
@@ -44,7 +44,7 @@
               </div>
               <div class="d-flex flex-column gap-3 ">
                 <h2>Frequent Asked Questions</h2>
-                <p>Lorem ipsum dolor sit amet consectetur. Condimentum risus eu et lacus et eget.</p>
+                <p>Explore our Frequently Asked Questions section to find answers to common inquiries and gain a better understanding of our services and policies.</p>
               </div>
               <!-- accordion -->
               <div class="accordion" id="accordionExample">
@@ -52,14 +52,13 @@
                   <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                      Loreum Ipsum Dummy Text Data
+                      What is the importance of recycling in waste management?
                     </button>
                   </h2>
                   <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore et dolore magna aliqua. In vitae turpis massa sed elementum
+                      Recycling plays a crucial role in waste management by reducing the amount of waste sent to landfills, conserving natural resources, and lowering energy consumption. It helps minimize environmental impact and supports the creation of a circular economy where materials are reused rather than discarded.
                     </div>
                   </div>
                 </div>
@@ -67,14 +66,13 @@
                   <h2 class="accordion-header" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      Loreum Ipsum Dummy Text Data
+                      How can I properly segregate waste at home?
                     </button>
                   </h2>
                   <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore et dolore magna aliqua. In vitae turpis massa sed elementum
+                      Proper waste segregation involves separating recyclables (like paper, plastic, and glass), compostable materials (such as food scraps), and non-recyclable waste (like contaminated items). Ensure each type of waste is placed in designated bins, making it easier for waste collectors to recycle and dispose of it properly.
                     </div>
                   </div>
                 </div>
@@ -82,14 +80,13 @@
                   <h2 class="accordion-header" id="headingThree">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                      Loreum Ipsum Dummy Text Data
+                      What happens to my recycling after it’s collected?
                     </button>
                   </h2>
                   <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore et dolore magna aliqua. In vitae turpis massa sed elementum
+                      Once collected, your recycling is taken to a materials recovery facility where it is sorted, cleaned, and processed into raw materials. These materials are then used to create new products, helping reduce the need for raw material extraction and lowering overall environmental impact.
                     </div>
                   </div>
                 </div>
@@ -97,14 +94,13 @@
                   <h2 class="accordion-header" id="headingFour">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                      Loreum Ipsum Dummy Text Data
+                      How can my business reduce waste and be more sustainable?
                     </button>
                   </h2>
                   <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore et dolore magna aliqua. In vitae turpis massa sed elementum
+                      Businesses can reduce waste by implementing practices like waste segregation, using sustainable packaging, and optimizing their resource usage. Additionally, businesses can invest in energy-efficient equipment, reduce paper usage, and promote a culture of sustainability among employees and customers.
                     </div>
                   </div>
                 </div>
@@ -112,14 +108,13 @@
                   <h2 class="accordion-header" id="headingFive">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                       data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                      Loreum Ipsum Dummy Text Data
+                      Why is it important to manage electronic waste (e-waste) properly?
                     </button>
                   </h2>
                   <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                      labore et dolore magna aliqua. In vitae turpis massa sed elementum
+                      Proper management of e-waste is vital because electronic devices contain hazardous materials like lead, mercury, and cadmium that can contaminate the environment if disposed of incorrectly. Recycling e-waste helps recover valuable metals and ensures that harmful substances are safely handled, reducing environmental and health risks.
                     </div>
                   </div>
                 </div>
