--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -61,9 +61,9 @@
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>John Doe</td>
-                        <td>john.doe@example.com</td>
-                        <td>+1 234 567 890</td>
+                        <td>Michael Johnson</td>
+                        <td>michael.johnson@email.com</td>
+                        <td>+91 4876239647</td>
                         <td>
                             <button class="edit-btn">Edit</button>
                             <button class="delete-btn">Delete</button>
@@ -99,8 +99,9 @@
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>John Doe</td>
-                        <td>123 Eco Street, Green City</td>
+                        <td>Michael Johnson</td>
+                        <td>321 Birch Street, Unit 302,
+                            Lakeside, FL 33401, CALTAX</td>
                         <td>Pending</td>
                         <td>
                             <button class="approve-btn">Approve</button>
