--- a/html/About.html
+++ b/html/About.html
@@ -358,7 +358,10 @@
                 </div>
         </section>
         <!-- 2.7 About-FAQs_questions section  -->
-        
+        <!-- Footer -->
+    <footer class="footer fade-in">
+        <p>&copy; 2025 Green Horizon. All rights reserved.</p>
+    </footer>
 
     <!-- bootstrap min javascript -->
     <script src="assets/js/javascript-lib/bootstrap.min.js"></script>
